Ajout historique de badge
