# gamification-impl/src/main/resources/api-spec.yaml
@@ -141,6 +141,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/TopTenByPoint'
 
+  /users/{id}/BadgeAwardedHistory:
+    get:
+      description: List of the badge awarded by an user
+      operationId: getBadgeAwardedHistory
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: List of the badge awarded by an user
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/BadgeAwardedHistoryForAnUser'
+
   /events/:
     post:
       description: Report that a new event has append in the gamified application
@@ -286,6 +304,24 @@ components:
           items:
             $ref: '#/components/schemas/UserPoint'
           maxItems: 10
+
+    BadgeAwardedHistory:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        date:
+          type: string
+
+    BadgeAwardedHistoryForAnUser:
+      type: object
+      properties:
+        history:
+          type: array
+          items:
+            $ref: '#/components/schemas/BadgeAwardedHistory'
 
     HistoryOfPoint:
       type: object
